--- a/css/cms.css
+++ b/css/cms.css
@@ -1,5 +1,11 @@
 @CHARSET "UTF-8";
 
+/**
+ * Entwickelt von Maurice Busch <busch.maurice@gmx.net>
+ * copyright 2014
+ * version 0.1
+ */
+
 .grid-view table.items tr.even {
 	background-color: #EEEEEE;
 }
