Implemented menu to create, read, update and delete menupoints.

--- a/css/cms.css
+++ b/css/cms.css
@@ -17,3 +17,119 @@
 .grid-view table.items tr.selected {
 	background-color: #DDDDDD;
 }
+
+#mainmenu a > .glyphicon {
+	margin-left: -5px;
+	margin-right: 5px;
+}
+
+.dropdown-menu > li > a:hover,
+.dropdown-menu > li > a:focus {
+	background-color: transparent;
+}
+
+.dropdown-menu > .active > a,
+.dropdown-menu > .active > a:hover,
+.dropdown-menu > .active > a:focus {
+	background-color: #357ebd;
+	background-image: -webkit-linear-gradient(top, #428bca 0%, #357ebd 100%);
+	background-image: linear-gradient(to bottom, #428bca 0%, #357ebd 100%);
+	background-repeat: repeat-x;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff428bca', endColorstr='#ff357ebd', GradientType=0);
+}
+
+.dropdown-menu>li {	
+	position:relative;
+	-webkit-user-select: none; /* Chrome/Safari */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* IE10+ */
+	/* Rules below not implemented in browsers yet */
+	-o-user-select: none;
+	user-select: none;
+	cursor:pointer;
+}
+
+.dropdown-menu .sub-menu {
+    left: 100%;
+    position: absolute;
+    top: 0;
+    display:none;
+    margin-top: -1px;
+	border-top-left-radius:0;
+	border-bottom-left-radius:0;
+	box-shadow:none;
+}
+
+.submenu {
+	margin-left: 20px;
+}
+
+.caret,
+.bottom-caret:after,
+.top-caret:after,
+.right-caret:after,
+.left-caret:after {
+	content:"";
+	display: inline-block;
+	height: 0;
+	margin-left: 5px;
+	vertical-align: middle;
+	width: 0;
+}
+
+.caret,
+.bottom-caret:after,
+.top-caret:after {
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
+}
+
+.caret,
+.asc .caret,
+.bottom-caret:after {
+	border-top: 5px solid;
+}
+
+.desc .caret,
+.top-caret:after {
+	border-bottom: 5px solid;
+	border-top: 0;
+}
+
+.right-caret:after,
+.left-caret:after {
+	border-top: 5px solid transparent;
+	border-bottom: 5px solid transparent;
+}
+
+.right-caret:after {
+	border-left: 5px solid;
+}
+
+.left-caret:after {
+	border-right: 5px solid;
+}
+
+.verification img {
+	margin-right: 5px;
+	margin-bottom: 5px;
+}
+
+.submenu {
+	margin-bottom: 0px;
+	margin-top: 5px;
+}
+
+.glyphicon {
+	padding-bottom: 3px;
+    padding-top: 3px;
+}
+
+#modalmenu {
+	z-index: 9999;
+}
+
+#footer {
+	font-size: 11px;
+	color: #555555;
+}
